--- a/frontend/views/contatos.html
+++ b/frontend/views/contatos.html
@@ -14,20 +14,30 @@
     />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 </head>
-<body>
+<body class="contatos">
+    <div class="btts-contatos">
+        <i class="fa-solid fa-chevron-left"></i>
+        <a href="../views/login.html">Voltar</a>
+    </div>
     <main>
         <div class="title-contatos">
-            <h1>Contatos</h1>
+            <h1>Contatos dos Agentes Cadastrados</h1>
+            <i class="fa-solid fa-phone-flip"></i>
         </div>
         <div class="contatos-agentes">
-            <div id="usuarios">
+            <div id="nomes-agentes">
+                <h3>Nomes dos Agentes</h3>
 
             </div>
-            <div class="contato-agentes">
-                
+            <div  id="telefones-agentes">
+                <h3>Telefones</h3>
+            </div>
+            <div id="email-agentes">
+                <h3>Email</h3>
             </div>
         </div>
     </main>
-    <script src="../javaScript/dadosContatos.js"></script>
+    <div class="decoracao2"></div>
+    <script src="../public/javaScript/dadosContatos.js"></script>
 </body>
 </html>
