--- a/frontend/views/login.html
+++ b/frontend/views/login.html
@@ -61,7 +61,7 @@
     </div>
     <footer class="rodape">
       <p>&copy;SMAAS. Todos os direitos reservados.</p>
-      <a href="">Contatos <i class="fa-regular fa-comments"></i></a>
+      <a href="/contatos">Contatos <i class="fa-regular fa-comments"></i></a>
     </footer>
 
     <div class="decoracao2"></div>
