--- a/frontend/views/login.html
+++ b/frontend/views/login.html
@@ -61,7 +61,7 @@
     </div>
     <footer class="rodape">
       <p>&copy;SMAAS. Todos os direitos reservados.</p>
-      <a href="/contatos">Contatos <i class="fa-regular fa-comments"></i></a>
+      <span class="itens-rodape"><a href="/contatos">Contatos <i class="fa-regular fa-comments"></i></a> | <a href="../views/sobre.html">Sobre <i class="fa-solid fa-book-open-reader"></i></a></span>
     </footer>
 
     <div class="decoracao2"></div>
