--- a/frontend/views/conta.html
+++ b/frontend/views/conta.html
@@ -33,7 +33,7 @@
                 </a>
             </li>
             <li class="item-menu">
-                <a href="#">
+                <a href="/logout">
                     <span class="icone"><i class="fa-solid fa-arrow-right-from-bracket"></i></span>
                     <span class="txt-link">Sair</span>
                 </a>
@@ -51,49 +51,49 @@
                 <div class="componentes-basicos">
                     <div class="informacao">
                         <label for="">Nome:</label>
-                        <h3><%= usuario.nome %></h3>
+                        <h3><%= agente.nome %></h3>
                     </div>
                 </div>
                 <div class="componentes-basicos">
                     <div class="informacao">
                         <label for="">Telefone:</label>
-                        <h3><%= usuario.telefone %></h3>
+                        <h3><%= agente.telefone %></h3>
                     </div>
                 </div>
                 <div class="componentes-basicos">
                     <div class="informacao">
                         <label for="">Senha:</label>
-                        <h3><%= usuario.senha %></h3>
+                        <h3><%= agente.senha %></h3>
                     </div>
                 </div>
                 <div class="componentes-basicos">
                     <div class="informacao">
                         <label for="">Email:</label>
-                        <h3><%= usuario.email %></h3>
+                        <h3><%= agente.email %></h3>
                     </div>
                 </div>
                 <div class="componentes-basicos">
                     <div class="informacao">
                         <label for="">Formação:</label>
-                        <h3><%= usuario.formacao %></h3>
+                        <h3><%= agente.formacao %></h3>
                     </div>
                 </div>
                 <div class="componentes-basicos">
                     <div class="informacao">
                         <label for="">CPF:</label>
-                        <h3><%= usuario.cpf %></h3>
+                        <h3><%= agente.cpf %></h3>
                     </div>
                 </div>
                 <div class="componentes-basicos">
                     <div class="informacao">
                         <label for="">RG:</label>
-                        <h3><%= usuario.rg %></h3>
+                        <h3><%= agente.rg %></h3>
                     </div>
                 </div>
                 <div class="componentes-basicos">
                     <div class="informacao">
                         <label for="">Data de contratacao:</label>
-                        <h3><%= usuario.data_contratacao %></h3>
+                        <h3><%= agente.data_contratacao %></h3>
                     </div>
                 </div>
         </div>
