--- a/frontend/views/sobre.html
+++ b/frontend/views/sobre.html
@@ -16,6 +16,10 @@
 </head>
 <body class="sobre">
     <header class="container-titulo-image">
+        <div class="btts-contatos">
+            <i class="fa-solid fa-chevron-left"></i>
+            <a href="../views/login.html">Voltar</a>
+        </div>
         <div class="imagem">
             <img src="../public/image/SMAAS-removebg.png" alt="SMAAS">
         </div>
@@ -24,14 +28,60 @@
         </div>
     </header>
     <section class="descricao">
-        <p>SMAAS ( Sistema de Monitoramento de Atividades dos Agentes de Saude ), tem como objetivo agrupar os dados relacionados à agentes de saúde, desde suas informações básicas pessoais até os registros da comunidade na qual está encarregado de ajudar, visando uma melhor organização desses dados e uma dinamização dos processos de atendimento.
-        Os agentes cadastrados no sistema poderao ter maior controle de sua(s) microarea(s), podendo adiconar mais pessoas e seus respectivos dados.
+        <p>SMAAS ( Sistema de Monitoramento de Atividades dos Agentes de Saude ), tem como objetivo <strong>agrupar os dados relacionados à agentes de saúde</strong>, desde suas <strong>informações básicas pessoais</strong> até os <strong>registros da comunidade na qual está encarregado de ajudar</strong>, visando uma <strong>melhor organização desses dados</strong> e uma <strong>dinamização dos processos de atendimento.</strong>
+        Os agentes cadastrados no sistema poderao ter <strong>maior controle de sua(s) microarea(s)</strong>, podendo adiconar <strong>mais pessoas e seus respectivos dados.</strong>
         
         
         </p>
     </section>
     <section class="criadores">
-
+        <div class="titulo">
+            <h2>Desenvolvedores <i class="fa-solid fa-code"></i></h2>
+        </div>
+        <div class="container-criadores">
+            <div class="desenvolvedores">
+                <div class="desenvolvedor">
+                    <div class="imagem">
+                        <img src="../public/image/ft-perfil-eros.jpg" alt="eros-franklin">
+                    </div>
+                    <h3>Eros Franklin Soares Felix</h3>
+                    <h4>FrontEnd</h4>
+                    <a href=""><i class="fa-brands fa-github"></i></a>
+                </div>
+                <div class="desenvolvedor">
+                    <div class="imagem">
+                        <img src="../public/image/ft-perfil-jgui.jpg" alt="jose-guilherme" id="gui">
+                    </div>
+                    <h3>Jose Guilherme Morato Bizerra de Lima</h3>
+                    <h4>BackEnd</h4>
+                    <a href="https://github.com/JoseGuilherme0"><i class="fa-brands fa-github"></i></a>
+                </div>
+                <div class="desenvolvedor">
+                    <div class="imagem">
+                        <img src="../public/image/ft-perfil-francisco.jpg" alt="francisco" id="francisco">
+                    </div>
+                    <h3>Francisco Chagas Neto</h3>
+                    <h4>BackEnd</h4>
+                    <a href="https://github.com/ImFranciscoNeto"><i class="fa-brands fa-github"></i></a>
+                </div>
+                <div class="desenvolvedor">
+                    <div class="imagem">
+                        <img src="../public/image/ft-perfil-gabriel.jpg" alt="gabriel" id="gabriel">
+                    </div>
+                    <h3>Gabriel Ferreira Olveira</h3>
+                    <h4>Modelador Banco de Dados</h4>
+                    <a href="https://github.com/gabriell159"><i class="fa-brands fa-github"></i></a>
+                </div>
+                <div class="desenvolvedor">
+                    <div class="imagem">
+                        <img src="../public/image/fr-perfil-kaio.jpg" alt="kaio-vinicius" id="kaio">
+                    </div>
+                    <h3>Kaio Vinicius Cordeiro Batista</h3>
+                    <h4>Modelador Banco de Dados</h4>
+                    <a href="https://github.com/kaioviniciuscb"><i class="fa-brands fa-github"></i></a>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
