--- a/frontend/views/detalhesMicroarea.html
+++ b/frontend/views/detalhesMicroarea.html
@@ -26,7 +26,7 @@
                 </a>
             </li>
             <li class="item-menu">
-                <a href="#">
+                <a href="/logout">
                     <span class="icone"><i class="fa-solid fa-arrow-right-from-bracket"></i></span>
                     <span class="txt-link">Sair</span>
                 </a>
