add funcionalidades em visitas e adicao de detalhes

--- a/frontend/views/detalhesMicroarea.html
+++ b/frontend/views/detalhesMicroarea.html
@@ -38,10 +38,21 @@
             <h2 id="bairroTitulo"></h2>
         </span>
         <div id="microarea-container" class="microarea-container">
-            
+            <div class="contatos-agentes">
+                <div id="nomes-agentes">
+                    <h3>Rua</h3>
+                </div>
+                <div  id="telefones-agentes">
+                    <h3>Responsavel</h3>
+                </div>
+                <div id="email-agentes">
+                    <h3>Visita</h3>
+                </div>
+            </div>
         </div>
     </main>
     <script src="../public/javaScript/script_detalhesMicroarea"></script>
+    script
     <script src="../public/javaScript/menuLateral.js"></script>
 </body>
 </html>
