--- a/frontend/public/style/style.css
+++ b/frontend/public/style/style.css
@@ -653,7 +653,7 @@ body{
     text-align: center;
     grid-column: auto;
     width: 40%;
-    height:40%;
+    height:73%;
     border-radius: 10px;
     border:1px solid var(--cor-borda);
     padding:40px;
@@ -737,7 +737,151 @@ body{
 #fechar:hover{
     background-color: var(--cor-fundo2);
 }
+.familia{
+    display: flex;
+    text-align: center;
+    font-size:18px;
+    background-color: #e2edff;
+    justify-content: space-between;
+    border-radius:10px;
+    border: 5px outset var(--cor-borda);
+    color:var(--cor-texto2);
+    box-shadow: 2px 4px 1px var(--cor-sombra-texto);
+    width: 80%;
+    height: auto;
+    margin-bottom:50px;
+    top:350px;
+    left:50%;
+    position:absolute;
+    overflow-y: auto;
+    transform: translate(-50%,-50%);
+}
 
+.familia #rua-familia{
+    position:relative;
+    border: 2px solid var(--cor-borda);
+    width: 500px;
+    padding: 0px 15px;
+}
+.familia #rua-familia h3{
+   text-align: center;
+}
+.familia #rua-familia p{
+    width: 100%;
+    text-align: left;
+    font-weight: lighter;
+    text-shadow: 1px 1px 2px var(--cor-sombra-texto);
+}
+.familia #responsavel-familia{
+    display: flex;
+    position:relative;
+    border: 2px solid var(--cor-borda);
+    width: 300px;
+    padding: 0px 15px;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.familia #responsavel-familia h3{
+    text-align: center;
+}
+.familia #responsavel-familia a{
+    width: 100%;
+    text-decoration: none;
+    color:var(--cor-texto2);
+    margin-bottom: 20px;
+    padding: 0;
+    font-weight: bold;
+    text-shadow: 1px 1px 2px var(--cor-sombra-texto);
+}
+.familia #responsavel-familia a:hover{
+    text-decoration: underline;
+}
+.familia #id-familia{
+    max-width: 700px;
+    position:relative;
+    text-align: center;
+    text-overflow: ellipsis;
+    border: 2px solid var(--cor-borda);
+    padding: 0px 15px;
+
+}
+.familia #id-familia h3{
+    text-align: center;
+}
+.familia #id-familia p{
+    width: 100%;
+    font-weight: lighter;
+    text-shadow: 1px 1px 2px var(--cor-sombra-texto);
+}
+
+.visita{
+    display: flex;
+    text-align: center;
+    font-size:18px;
+    background-color: #e2edff;
+    justify-content: space-between;
+    border-radius:10px;
+    border: 5px outset var(--cor-borda);
+    color:var(--cor-texto2);
+    box-shadow: 2px 4px 1px var(--cor-sombra-texto);
+    width: 80%;
+    height: auto;
+    margin-bottom:50px;
+    top:350px;
+    left:50%;
+    position:absolute;
+    overflow-y: auto;
+    transform: translate(-50%,-50%);
+}
+
+.visita #id-familia{
+    position:relative;
+    border: 2px solid var(--cor-borda);
+    width: 500px;
+    padding: 0px 15px;
+}
+.visita #id-familia h3{
+   text-align: center;
+}
+.visita #id-familia p{
+    width: 100%;
+    text-align: left;
+    font-weight: lighter;
+    text-shadow: 1px 1px 2px var(--cor-sombra-texto);
+}
+.visita #data-visita{
+    position:relative;
+    border: 2px solid var(--cor-borda);
+    width: 300px;
+    padding: 0px 15px;
+}
+.visita #data-visita h3{
+    text-align: center;
+}
+.visita #data-visita p{
+    width: 100%;
+    text-align: left;
+    font-weight: lighter;
+    text-shadow: 1px 1px 2px var(--cor-sombra-texto);
+}
+
+.visita #motivo-visita{
+    max-width: 700px;
+    position:relative;
+    text-align: center;
+    text-overflow: ellipsis;
+    border: 2px solid var(--cor-borda);
+    padding: 0px 15px;
+
+}
+.visita #motivo-visita h3{
+    text-align: center;
+}
+.visita #motivo-visita p{
+    width: 100%;
+    font-weight: lighter;
+    text-shadow: 1px 1px 2px var(--cor-sombra-texto);
+}
 .conta{
     background-image: linear-gradient(to top,#fff, #fff);
     overflow: auto;
