--- a/frontend/views/conta.html
+++ b/frontend/views/conta.html
@@ -33,6 +33,12 @@
                 </a>
             </li>
             <li class="item-menu">
+                <a href="/visitas">
+                    <span class="icone"><i class="fa-solid fa-house-circle-check"></i></span>
+                    <span class="txt-link">Visitas</span>
+                </a>
+            </li>
+            <li class="item-menu">
                 <a href="/logout">
                     <span class="icone"><i class="fa-solid fa-arrow-right-from-bracket"></i></span>
                     <span class="txt-link">Sair</span>
