--- a/frontend/views/visitas.html
+++ b/frontend/views/visitas.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/uuid@latest/dist/umd/uuidv4.min.js"></script>
 </head>
-<body class="Microarea">
+<body class="page-visita">
     <nav class="menuLateral">
         <div class="btn-expandir">
             <i class="fa-solid fa-bars" id="btnExpandir"></i>
@@ -52,7 +52,14 @@
         <div id="overlay" class="overlay">
             <div id="modal" class="modal">
                 <h2>Cadastrar Visita</h2>
-
+                <label for="id-agente">Seu ID:</label>
+                <div class="componentesM">
+                    <i class="fa-solid fa-location-dot"></i><input type="number" name="id-agente" id="id-agente" required>
+                </div>
+                <label for="id-familia">Id da Familia:</label>
+                <div class="componentesM">
+                    <i class="fa-solid fa-location-dot"></i><input type="number" name="id-familia" id="id-familia" required>
+                </div>
                 <label for="visita-motivo">Motivo</label>
                 <div class="componentesM">
                     <i class="fa-solid fa-location-dot"></i><input type="text" name="visita-motivo" id="visita-motivo" placeholder="Nome Completo" required>
@@ -73,7 +80,7 @@
         </div>
         <div id="visita-container" class="visita-container">
             <div class="visita">
-                <div id="id-familia">
+                <div id="familia-id">
                     <h3>Id da Familia</h3>
                 </div>
                 <div  id="data-visita">
