--- a/frontend/views/detalhesMicroarea.html
+++ b/frontend/views/detalhesMicroarea.html
@@ -26,6 +26,12 @@
                 </a>
             </li>
             <li class="item-menu">
+                <a href="/visitas">
+                    <span class="icone"><i class="fa-solid fa-house-circle-check"></i></span>
+                    <span class="txt-link">Visitas</span>
+                </a>
+            </li>
+            <li class="item-menu">
                 <a href="/logout">
                     <span class="icone"><i class="fa-solid fa-arrow-right-from-bracket"></i></span>
                     <span class="txt-link">Sair</span>
@@ -35,18 +41,36 @@
     </nav>
     <main>
         <span class="titleMicroarea">
-            <h2 id="bairroTitulo"></h2>
+            <h2 id="bairroTitulo">Detalhes da Familia</h2>
         </span>
         <div id="microarea-container" class="microarea-container">
             <div class="contatos-agentes">
                 <div id="nomes-agentes">
-                    <h3>Rua</h3>
+                    <h3>Nome</h3>
                 </div>
                 <div  id="telefones-agentes">
-                    <h3>Responsavel</h3>
+                    <h3>Altura</h3>
                 </div>
                 <div id="email-agentes">
-                    <h3>Visita</h3>
+                    <h3>Peso</h3>
+                </div>
+                <div id="email-agentes">
+                    <h3>CPF</h3>
+                </div>
+                <div id="email-agentes">
+                    <h3>RG</h3>
+                </div>
+                <div id="email-agentes">
+                    <h3>Telefone</h3>
+                </div>
+                <div id="email-agentes">
+                    <h3>Email</h3>
+                </div>
+                <div id="email-agentes">
+                    <h3>Doencas Cronicas</h3>
+                </div>
+                <div id="email-agentes">
+                    <h3>Alergias</h3>
                 </div>
             </div>
         </div>
