--- a/frontend/views/microarea.html
+++ b/frontend/views/microarea.html
@@ -42,7 +42,7 @@
     </nav>
     <main>
         <span class="titleMicroarea">
-            <h2 id="bairroTitulo"></h2>
+            <h2 id="bairroTitulo">Bairro</h2>
         </span>
         <div class="btnNovaMicroarea">
             <button id="novaMicroarea">Nova Familia</button>
