--- a/frontend/views/visitas.html
+++ b/frontend/views/visitas.html
@@ -43,7 +43,7 @@
     </nav>
     <main>
         <span class="titleMicroarea">
-            <h2 id="bairroTitulo"></h2>
+            <h2 id="bairroTitulo">Visitas</h2>
         </span>
         <div class="btnNovaMicroarea">
             <button id="novaVisita">Nova Visita</button>
